add CurrencyConverterModelTest and CurrencyConverterUITest, further refactoring of the model and controller class